# NiceChat

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/im/: ByteBuf.cpp  ByteBuf.h  CMakeLists.txt  Convert.cpp  Convert.h  HttpClient.cpp  HttpClient.h  IMGlobalStatic.cpp  IMGlobalStatic.h  QIM.cpp  QIM.h
src/im/database/: IMDataBase.cpp  IMDataBase.h  Message.cpp  Message.h  MessageDo.cpp  MessageDo.h  Session.cpp  Session.h  SessionDo.cpp  SessionDo.h  User.cpp  User.h  export.h  precompiled.h
src/im/proto/: friends.pb.cc  friends.pb.h  im.pb.cc  im.pb.h  messages.pb.cc  messages.pb.h  result.pb.cc  result.pb.h  session.pb.cc  session.pb.h  team.pb.cc  team.pb.h
src/ui/: CMakeLists.txt  ContactController.cpp  ContactController.h  ContactListModel.cpp  ContactListModel.h  EmojiModel.cpp  EmojiModel.h  FileListModel.cpp  FileListModel.h  GlobalStatic.h  LoginController.h  MainWindow.cpp  MainWindow.h  MessageController.cpp  MessageController.h  MessageListModel.cpp  MessageListModel.h  QLogHelper.cpp  QLogHelper.h  QUIHelper.cpp  QUIHelper.h  SessionController.cpp  SessionController.h  SessionListModel.cpp  SessionListModel.h  TextDocument.cpp  TextDocument.h  main.cpp
src/ui/res/: emoji.json  qml.qrc
src/ui/res/component/: CusAvatar.qml  CusButton.qml  CusPage.qml  CusSliderBar.qml  CusTextArea.qml  CusTextEdit.qml  CusToolBar.qml  CusToolButton.qml  CusWindow.qml  CusWindowDialog.qml  PrimaryButton.qml  PrimaryTextField.qml
src/ui/res/layout/: ColorPickerWindow.qml  EmojiPicker.qml  EmojiPickerWindow.qml  Login.qml  MainAbout.qml  MainContact.qml  MainHome.qml  MainSession.qml  NetWorkStatus.qml  SendFileDiaog.qml  Settings.qml  main.qml
src/ui/res/storage/: Router.qml  Theme.qml
third/orm/lib/win64/debug/: QxOrmd.lib
third/orm/lib/win64/release/: QxOrm.lib
third/protobuf/lib/win64/release/: libprotobuf.lib
